usbpsu_v1_4:
Modify USBPSU driver code to fit USB common example code for all USB IPs
Added support for flushing Dcache for setupdata packet for control ep's
Changed the mass storage examples to be in sync with common mode example code
Changed the dfu examples to be in sync with common example code
Added hibernation support for usb
Added changes to usbpsu driver for supporting microblaze platform
Enabled event generation for usb controller when run on microblaze plaforms

xilfpga_v4_0:
Added the following Secure features to the xilfpga library.
1) Authenticated Bitstream loading using DDR.
2) Authenticated Bitstream loading Using OCM.
3) Authenticated + Encrypted Bitstream loading Using DDR with User-key.
4) Authenticated + Encrypted Bitstream Loading Using OCM with Device-key.
5) Authenticated + Encrypted + Key rolling Bitstream loading Using DDR with User-key.
6) Authenticated + Encrypted + Key rolling Bitstream loading Using DDR with Device-key.
7) Authenticated + Encrypted + Key rolling Bitstream Loading Using OCM with User-key.
8) Authenticated + Encrypted + Key rolling Bitstream Loading Using OCM with Device-ke

For this version onwards we are not stripping the Header for Both
Secure and Non-Secure Bitstream Images.So the entry point interface
will be changed as follows.
u32 XFpga_PL_BitSream_Load (UINTPTR WrAddr, UINTPTR KeyAddr, u32 flags);

Added the legacy bit file loading feature support from U-boot.
and improve the error handling support by returning the
proper ERROR value upon error conditions.

xilrsa_v1_5:
Added description in mld

xilsecure_v3_0:
Added support for NIST-SHA3 padding
Added API to make KECCAK/NIST(default)padding selection
Added AES and KUP key clear call after decryption
Modified XSecure_AesDecrypt() to use key in Secure header
Added APIs to load secure single partition image

xilskey_v6_4:
Corrected status bits for Ultrascale plus
Added support for Virtex Ultrascale and Ultrascale plus