@@ -45,11 +45,15 @@
  * 1.4	 BK   12/01/18 Renamed the file to be in sync with usb common code
  *		       changes for all USB IPs
 <<<<<<< HEAD
+<<<<<<< HEAD
  *	 vak  22/01/18 Added changes for supporting microblaze platform
  *	 vak  13/03/18 Moved the setup interrupt system calls from driver to
  *		       example.
 =======
 >>>>>>> drivers: usbpsu: Change dfu example code to be in sync with common example code
+=======
+ *	 vak  22/01/18 Added changes for supporting microblaze platform
+>>>>>>> drivers: usbpsu: add microblaze support to usbpsu driver
  * </pre>
  *
  *****************************************************************************/
@@ -88,6 +92,7 @@ struct Usb_DevData UsbInstance;
 Usb_Config *UsbConfigPtr;
 
 <<<<<<< HEAD
+<<<<<<< HEAD
 #ifdef __MICROBLAZE__
 #ifdef XPAR_INTC_0_DEVICE_ID
 XIntc	InterruptController;	/*XIntc interrupt controller instance */
@@ -112,6 +117,13 @@ XScuGic	InterruptController;	/* Interrupt controller instance */
 =======
 XScuGic InterruptController;  /* Interrupt controller instance */
 >>>>>>> drivers: usbpsu: Change dfu example code to be in sync with common example code
+=======
+#ifdef XPAR_INTC_0_DEVICE_ID
+XIntc	InterruptController;	/*XIntc interrupt controller instance */
+#else
+XScuGic	InterruptController;	/* Interrupt controller instance */
+#endif
+>>>>>>> drivers: usbpsu: add microblaze support to usbpsu driver
 
 u8 VirtFlash[0x10000000];
 
@@ -196,10 +208,14 @@ int main(void)
 	/* setup interrupts */
 	Status = SetupInterruptSystem(UsbInstance.PrivateData, INTC_DEVICE_ID,
 <<<<<<< HEAD
+<<<<<<< HEAD
 					USB_INT_ID, (void *)&InterruptController);
 =======
 					&InterruptController);
 >>>>>>> drivers: usbpsu: Change dfu example code to be in sync with common example code
+=======
+					(void *)&InterruptController);
+>>>>>>> drivers: usbpsu: add microblaze support to usbpsu driver
 	if (Status != XST_SUCCESS)
 		return XST_FAILURE;
 
