@@ -46,6 +46,7 @@
 <<<<<<< HEAD
  *	 MYK	12/01/18 Added hibernation support for device mode
  *	 vak	22/01/18 Added Microblaze support for usbpsu driver
+<<<<<<< HEAD
  *	 vak	13/03/18 Moved the setup interrupt system calls from driver to
  *			 example.
 =======
@@ -53,6 +54,8 @@
 =======
  *	 MYK	12/01/18 Added hibernation support for device mode
 >>>>>>> drivers: usbpsu: Add hibernation support for usb
+=======
+>>>>>>> drivers: usbpsu: add microblaze support to usbpsu driver
  *
  * </pre>
  *
@@ -71,6 +74,7 @@ extern "C" {
 /************************** Constant Definitions ****************************/
 #define USB_DEVICE_ID		XPAR_XUSBPSU_0_DEVICE_ID
 <<<<<<< HEAD
+<<<<<<< HEAD
 =======
 #define INTC_DEVICE_ID		XPAR_SCUGIC_SINGLE_DEVICE_ID
 #define	USB_INTR_ID			XPAR_XUSBPS_0_INTR
@@ -79,6 +83,20 @@ extern "C" {
 =======
 #define	USB_WAKEUP_INTR_ID	XPAR_XUSBPS_0_WAKE_INTR
 >>>>>>> drivers: usbpsu: Add hibernation support for usb
+=======
+
+#ifdef	XPAR_INTC_0_DEVICE_ID	/* MICROBLAZE */
+#define	INTC_DEVICE_ID		XPAR_INTC_0_DEVICE_ID
+#define	USB_INTR_ID		XPAR_AXI_INTC_0_ZYNQ_ULTRA_PS_E_0_PS_PL_IRQ_USB3_0_ENDPOINT_0_INTR
+#elif	defined	PLATFORM_ZYNQMP	/* ZYNQMP */
+#define	INTC_DEVICE_ID		XPAR_SCUGIC_SINGLE_DEVICE_ID
+#define	USB_INTR_ID		XPAR_XUSBPS_0_INTR
+#define	USB_WAKEUP_INTR_ID	XPAR_XUSBPS_0_WAKE_INTR
+#else	/* OTHERS */
+#define	INTC_DEVICE_ID		0
+#define	USB_INTR_ID		0
+#endif
+>>>>>>> drivers: usbpsu: add microblaze support to usbpsu driver
 
 #define USB_EP_DIR_IN		XUSBPSU_EP_DIR_IN
 #define USB_EP_DIR_OUT		XUSBPSU_EP_DIR_OUT
@@ -174,8 +192,12 @@ void SetEpHandler(void *InstancePtr, u8 Epnum,
 <<<<<<< HEAD
 =======
 s32 SetupInterruptSystem(void *InstancePtr, u16 IntcDeviceID,
+<<<<<<< HEAD
 				XScuGic *IntcInstancePtr);
 >>>>>>> drivers: usbpsu: change driver for adding common example code for all USB IPs
+=======
+				void *IntcInstancePtr);
+>>>>>>> drivers: usbpsu: add microblaze support to usbpsu driver
 s32 Usb_Start(void *InstancePtr);
 void *Get_DrvData(void *InstancePtr);
 void Set_DrvData(void *InstancePtr, void *data);
