@@ -444,6 +444,7 @@ Changed the mass storage examples to be in sync with common mode example code
 Changed the dfu examples to be in sync with common example code
 Added hibernation support for usb
 Added changes to usbpsu driver for supporting microblaze platform
+<<<<<<< HEAD
 Enabled event generation for usb controller when run on microblaze plaforms
 
 xilfpga_v4_0:
@@ -526,6 +527,8 @@ zynqmp_pmufw:
   in EEMI
 - Updated xilfpga API calls in PMU Firmware with the latest version of
   xilfpga library
+=======
+>>>>>>> drivers: usbpsu: add microblaze support to usbpsu driver
 
 Changes for 2017.4
 ===============================
